# pywbt

./: .codecov.yml  .deepsource.toml  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  conftest.py  environment.yml  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  newfeature.yml
.github/workflows/: release.yml  test.yml
docs/: docs_hooks.py  docs_macros.py  index.md  reference.md  workflows.md
docs/examples/: __init__.py  basin.ipynb  basins.tif  index.md  strahler.tif  twi.ipynb  utils.py
docs/examples/data/: dem_tx_10m.tif  dem_uk.tif
docs/stylesheets/: extra.css
notebooks/: basin.ipynb
src/pywbt/: __init__.py  cli.py  dem_utils.py  pywbt.py
tests/: config.toml  dem.tif  test_pywbt.py
