[build-system]
build-backend = "hatchling.build"

requires = [
  "hatch-vcs",
  "hatchling",
]

[project]
name = "pywbt"
description = "A lightweight Python wrapper for WhiteboxTools command-line interface"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Taher Chegini", email = "cheginit@gmail.com" },
]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: GIS",
  "Topic :: Scientific/Engineering :: Hydrology",
  "Typing :: Typed",
]
dynamic = [
  "version",
]
dependencies = [
  "filelock",
]
optional-dependencies.cli = [
  "tomli>=1.1; python_version<'3.11'",
]
optional-dependencies.dem = [
  "geopandas>=1",
  "planetary-computer",
  "pystac-client",
  "rioxarray",
  "seamless-3dep>=0.3.1",
  "tiny-retriever>=0.1.2",
]
optional-dependencies.dev = [
  "folium",
  "geopandas>=1",
  "ipykernel",
  "ipywidgets",
  "mapclassify",
  "matplotlib",
  "planetary-computer",
  "pystac-client",
  "pytest",
  "rioxarray",
  "seamless-3dep>=0.3.1",
  "tiny-retriever>=0.1.2",
  "tomli>=1.1; python_version<'3.11'",
]
optional-dependencies.docs = [
  "black",
  "mkdocs>=1.5.3",
  "mkdocs-jupyter",
  "mkdocs-macros-plugin",
  "mkdocs-material>=9.5.20",
  "mkdocstrings-python",
]
optional-dependencies.lint = [
  "codespell",
  "pre-commit",
]
optional-dependencies.test = [
  "coverage[toml]",
  "pytest",
  "pytest-cov",
  "pytest-sugar",
]
optional-dependencies.typecheck = [
  "pyright",
]
urls.Changelog = "https://github.com/cheginit/pywbt/blob/main/CHANGELOG.md"
urls.CI = "https://github.com/cheginit/pywbt/actions"
urls.Homepage = "https://github.com/cheginit/pywbt"
urls.Issues = "https://github.com/cheginit/pywbt/issues"
scripts.pywbt = "pywbt.cli:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = [
  "src/pywbt",
]

[tool.hatch.build.targets.sdist]
exclude = [
  "*.zip",
]

[tool.ruff]
target-version = "py39"
line-length = 100

exclude = [ ".pixi", "__pycache__" ]

lint.select = [
  "B",
  "C4",
  "D",
  "E",
  "F",
  "I",
  "INT",
  "ISC",
  "N",
  "NPY201",
  "PERF",
  "PGH",
  "PIE",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "PT",
  "PTH",
  "PYI",
  "Q",
  "RUF",
  "S",
  "SIM",
  "T10",
  "T20",
  "TC",
  "TID",
  "TRY",
  "UP",
  "W",
  "YTT",
]

lint.ignore = [
  "D103",
  "D105",
  "E501",
  "ISC001",
  "PLR0913",
  "PLR2004",
  "S310",
  "S603",
  "S605",
  "S607",
  "TRY003",
]

lint.per-file-ignores."tests/*.py" = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",
  "PGH003",
  "S101",
]
lint.extend-safe-fixes = [
  "TC004",
  "TID252",
]
lint.isort.known-first-party = [ "pywbt" ]
lint.isort.required-imports = [ "from __future__ import annotations" ]

lint.pydocstyle.convention = "numpy"

[tool.codespell]
skip = "__pycache__,_build,.mypy_cache,.git,./htmlcov,cache,pixi.lock,**.ipynb,**WBT"
ignore-words-list = "gage,gages"

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
  "-v",
  "--cov",
  "--cov-append",
  "--cov-branch",
  "--cov-report=xml",
  "--junitxml=junit.xml",
  "--durations=5",
  "--exitfirst",
]
filterwarnings = [
  "ignore:.*Support for class-based:DeprecationWarning",
]
doctest_optionflags = 'NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL NUMBER'
testpaths = [
  "tests",
]

[tool.coverage.report]
exclude_lines = [
  "if TYPE_CHECKING:",
  "except zipfile.BadZipFile",
  "except FileNotFoundError",
  "except shutil.Error",
]
ignore_errors = true

[tool.coverage.paths]
source = [ "src", "*/site-packages" ]

[tool.coverage.run]
branch = true
parallel = true
source_pkgs = [
  "pywbt",
]
omit = [
  "**/__init__.py",
]

[tool.pyright]
exclude = [
  "**/__pycache__",
  "**/__init__.py",
]
include = [
  "src/pywbt",
]
reportMissingTypeStubs = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnnecessaryIsInstance = false
reportUntypedFunctionDecorator = false
reportAttributeAccessIssue = false
typeCheckingMode = "strict"

[tool.pixi.feature.docs.tasks]
build-docs = "mkdocs build --strict"
docs = "mkdocs serve"

[tool.pixi.project]
channels = [ "conda-forge" ]
platforms = [ "linux-64", "osx-64", "osx-arm64", "win-64" ]

[tool.pixi.pypi-dependencies]
pywbt = { path = ".", editable = true }

[tool.pixi.feature.dev.dependencies]
libgdal-core = "*"

[tool.pixi.feature.test.dependencies]
libgdal-core = "*"

[tool.pixi.feature.py39.dependencies]
python = "~=3.9.0"

[tool.pixi.feature.py313.dependencies]
python = "~=3.13.0"

[tool.pixi.environments]
dev = { features = [ "dev", "py313" ] }
test39 = { features = [ "test", "dem", "cli", "py39" ] }
test313 = { features = [ "test", "dem", "cli", "py313" ] }
typecheck = { features = [ "typecheck", "dem", "cli", "py313" ] }
lint = { features = [ "lint", "py313" ], no-default-feature = true }
docs = { features = [ "docs", "py313" ] }

[tool.pixi.feature.test.tasks]
test = "pytest"
report = { cmd = [ "coverage", "report" ], depends-on = [ "test" ] }
html = { cmd = [ "coverage", "html" ], depends-on = [ "report" ] }

[tool.pixi.feature.lint.tasks]
lint = "pre-commit run --all-files"
pcupdate = "pre-commit autoupdate"
spell = "codespell -w"

[tool.pixi.feature.typecheck.tasks]
typecheck = "pyright"
